--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 	<style>
 		body{
-			background-image: url('images/mother.png');
+			background-image: url('mother.png');
 			background-repeat: no-repeat;
 			background-attachment: fixed;
 			background-size: cover;
