--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
 		<div class="video">
 			<center>
 			<video width="320" height="100" autoplay muted>
-				<source src="name.mp4" type="video/mp4">
+				<source src="images/name.mp4" type="video/mp4">
 			</video>
 			</center>
 		</div>
