--- a/about.html
+++ b/about.html
@@ -151,14 +151,14 @@
 
 		<div>
 			<center>
-				<a href="index.html"><img src="C:\Users\zacha\Desktop\ZacharysPortfolio\images\zach.jpeg" alt="ZachPic" class="profile"></a>
+				<a href="index.html"><img src="images\zach.jpeg" alt="ZachPic" class="profile"></a>
 			</center>
 		</div>
 
 		<div class="video">
 			<center>
 			<video width="320" height="100" autoplay muted>
-				<source src="alittle.mp4" type="video/mp4">
+				<source src="images/alittle.mp4" type="video/mp4">
 			</video>
 			</center>
 		</div>
