--- a/contact.html
+++ b/contact.html
@@ -149,7 +149,7 @@
 	<header>
 		<div>
 			<center>
-				<a href="index.html"><img src="C:\Users\zacha\Desktop\ZacharysPortfolio\images\zach.jpeg" alt="ZachPic" class="profile"></a>
+				<a href="index.html"><img src="images\zach.jpeg" alt="ZachPic" class="profile"></a>
 			</center>
 		</div>
 
