--- a/education.html
+++ b/education.html
@@ -102,7 +102,7 @@
 
 		<div>
 			<center>
-				<a href="index.html"><img src="C:\Users\zacha\Desktop\ZacharysPortfolio\images\zach.jpeg" alt="ZachPic" class="profile"></a>
+				<a href="index.html"><img src="images\zach.jpeg" alt="ZachPic" class="profile"></a>
 			</center>
 		</div>
 
