--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
 								<a href="https://app.joinhandshake.com/profiles/n25yp7"><img src="images/handshake.png" alt="hadnshake-logo" class="logo"></a>
 							</div>
 							<div class="column">
-								<a href="https://github.com/zacharyzaczek"><img src="images/github.png" alt="github-logo" class="logo"></a>
+								<a href="https://github.com/zacharyzaczek"><img src="images/GitHub.png" alt="github-logo" class="logo"></a>
 							</div>
 						  </div>
 						</div>
