--- a/education.html
+++ b/education.html
@@ -109,7 +109,7 @@
 		<div class="video">
 			<center>
 			<video width="320" height="100" autoplay muted>
-				<source src="academic.mp4" type="video/mp4">
+				<source src="images/academic.mp4" type="video/mp4">
 			</video>
 			</center>
 		</div>
