--- a/projects.html
+++ b/projects.html
@@ -130,7 +130,7 @@
 		<div class="video">
 			<center>
 			<video width="320" height="100" autoplay muted>
-				<source src="observe.mp4" type="video/mp4">
+				<source src="images/observe.mp4" type="video/mp4">
 			</video>
 			</center>
 		</div>
