--- a/contact.html
+++ b/contact.html
@@ -156,7 +156,7 @@
 		<div class="video">
 			<center>
 			<video width="320" height="100" autoplay muted>
-				<source src="connect.mp4" type="video/mp4">
+				<source src="images/connect.mp4" type="video/mp4">
 				
 			  Your browser does not support the video tag.
 			</video>
