--- a/projects.html
+++ b/projects.html
@@ -86,7 +86,7 @@
 			color: #333;
 		}
 
-		/* Projects row */
+		/* Projects row - centered for single item */
 		.projects-row {
 			display: flex;
 			justify-content: center;
@@ -183,15 +183,7 @@
 			<div class="project-item">
 				<div class="bio-box">
 					<div class="image-container">
-						<a href="https://github.com/zacharyzaczek/Academic_Projects"><img src="images/academic.png" alt="First image"></a>
-					</div>
-				</div>
-			</div>
-			
-			<div class="project-item">
-				<div class="bio-box">
-					<div class="image-container">
-						<a href="https://github.com/zacharyzaczek/Personal_Projects"><img src="images/personal.png" alt="Second image"></a>
+						<a href="https://github.com/zacharyzaczek/Personal_Projects"><img src="images/personal.png" alt="Personal Projects"></a>
 					</div>
 				</div>
 			</div>
