--- a/education.html
+++ b/education.html
@@ -142,9 +142,9 @@
 						<br>
 						<sub>Southern New Hampshire University</sub>
 						<br>
-						<sub>Expected Graduation Date: August 2025</sub>
+						<sub>Graduated: September 1st, 2025</sub>
 						<br>
-						<sub>Current GPA (3.812)</sub>
+						<sub>GPA (3.812)</sub>
 						<br>
 						<br>
 						<hr>
