--- a/about.html
+++ b/about.html
@@ -157,7 +157,7 @@
 
 		<div class="video">
 			<center>
-			<video width="320" height="100" autoplay muted loop playsinline>
+			<video width="320" height="100" autoplay muted>
 				<source src="images/alittle.mp4" type="video/mp4">
 			</video>
 			</center>
